Logo creation and addiction.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
     </head>
     <body>
         <header id="navbar"> 
-            <h1 class="title"> Carlos Tojal </h1>
+		<a href="."><img id="logo" src="../img/logo.png"></img></a>
             <nav>
                 <a href="#"> Home </a>
                 <a href="#about-me"> About me </a>
@@ -73,7 +73,6 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
         <div id="contact-me">
             <h1 class="subtitle"> Contact me </h1>
             <div class="text">
-                I'm open for questions. <br>
                 Don't hesitate to contact me.
             </div>
             <div class="form">
@@ -85,7 +84,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
             </div>
         </div>
         <footer>
-            Developed by Carlos Tojal 2019. All rights reserved.
+            Developed by Carlos Tojal © 2019. All rights reserved.
             <div class="social">
                 <a href="https://reddit.com/u/carlostojal" target="_blank"><img src="../img/reddit.png"></a>
                 <a href="https://twitter.com/CarlosTojal" target="_blank"><img src="../img/twitter.png"></a>
