--- a/pt/index.html
+++ b/pt/index.html
@@ -38,6 +38,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#2b2b2b"/>
         <title> Carlos Tojal | Full-stack Developer </title>
+		<link rel="shortcut icon" type="image/png" href="../img/logo.png"/>
         <!-- My Style Sheet -->
         <link rel="stylesheet" href="../styles.css">
         <!-- Font from Gooogle Fonts -->
@@ -45,7 +46,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
     </head>
     <body>
         <header id="navbar"> 
-            <h1 class="title"> Carlos Tojal </h1>
+			<a href="."><img id="logo" src="../img/logo.png"></img></a>
             <nav>
                 <a href="#"> Início </a>
                 <a href="#about-me"> Sobre mim </a>
@@ -73,7 +74,6 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
         <div id="contact-me">
             <h1 class="subtitle"> Contacte-me </h1>
             <div class="text">
-                Estou aberto a questões. <br>
                 Não hesite em contactar-me.
             </div>
             <div class="form">
@@ -85,7 +85,7 @@ $$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ 
             </div>
         </div>
         <footer>
-            Desenvolvido por Carlos Tojal 2019. Todos os direitos reservados.
+            Desenvolvido por Carlos Tojal © 2019. Todos os direitos reservados.
             <div class="social">
                 <a href="https://reddit.com/u/carlostojal" target="_blank"><img src="../img/reddit.png"></a>
                 <a href="https://twitter.com/CarlosTojal" target="_blank"><img src="../img/twitter.png"></a>
