--- a/index.html
+++ b/index.html
@@ -1,189 +1,11 @@
 <!DOCTYPE html>
-
-<!-- 
-    Copyright (c) Carlos Tojal 2019
-    carlostojal-dev
-    github.com/carlostojal
--->
-
-<!--
-
-                               __                        __                                 __                __                      
-                              /  |                      /  |                               /  |              /  |                     
-  _______   ______    ______  $$ |  ______    _______  _$$ |_     ______      __   ______  $$ |          ____$$ |  ______   __     __ 
- /       | /      \  /      \ $$ | /      \  /       |/ $$   |   /      \    /  | /      \ $$ | ______  /    $$ | /      \ /  \   /  |
-/$$$$$$$/  $$$$$$  |/$$$$$$  |$$ |/$$$$$$  |/$$$$$$$/ $$$$$$/   /$$$$$$  |   $$/  $$$$$$  |$$ |/      |/$$$$$$$ |/$$$$$$  |$$  \ /$$/ 
-$$ |       /    $$ |$$ |  $$/ $$ |$$ |  $$ |$$      \   $$ | __ $$ |  $$ |   /  | /    $$ |$$ |$$$$$$/ $$ |  $$ |$$    $$ | $$  /$$/  
-$$ \_____ /$$$$$$$ |$$ |      $$ |$$ \__$$ | $$$$$$  |  $$ |/  |$$ \__$$ |   $$ |/$$$$$$$ |$$ |        $$ \__$$ |$$$$$$$$/   $$ $$/   
-$$       |$$    $$ |$$ |      $$ |$$    $$/ /     $$/   $$  $$/ $$    $$/    $$ |$$    $$ |$$ |        $$    $$ |$$       |   $$$/    
- $$$$$$$/  $$$$$$$/ $$/       $$/  $$$$$$/  $$$$$$$/     $$$$/   $$$$$$/__   $$ | $$$$$$$/ $$/          $$$$$$$/  $$$$$$$/     $/     
-                                                                       /  \__$$ |                                                     
-                                                                       $$    $$/                                                      
-                                                                        $$$$$$/                                                       
-
--->
-
 <html>
-    <head>
-        <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153707554-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-153707554-1');
-        </script>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="theme-color" content="#2b2b2b"/>
-        <title> Carlos Tojal | Full-stack Developer </title>
-        <!-- My Style Sheet -->
-        <link rel="stylesheet" href="../styles.css">
-        <!-- Font from Gooogle Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
-    </head>
-    <body>
-        <header id="navbar"> 
-		<a href="."><img id="logo" src="../img/logo.png"></img></a>
-            <nav>
-                <a href="#"> Home </a>
-                <a href="#about-me"> About me </a>
-                <a href="#contact-me"> Contact me </a>
-            </nav>
-        </header>
-        <div class="start">
-            <img id="img1" src="../img/programming1.jpg"></img>
-            <img id="img2" src="../img/programming2.jpg"></img>
-            <div class="initial_text">
-                <div class="hi">Hi, I'm Carlos.</div>
-                <div class="typewrite" data-period="2000" data-type='[ "A full-stack developer.", "A software developer.", "A web developer.", "An Android developer.", "A desktop developer.", "A web designer.", "An UI designer.", "An UX designer.", "A C developer.", "A Java developer.", "A Python developer.", "A PHP developer.", "A JavaScript developer."]'>
-                    <span class="wrap"></span>
-                </div>
-            </div>
-        </div>
-        <div id="about-me" class="section">
-            <h1 class="subtitle"> Who am I? </h1>
-            <div class="text">
-                I'm Carlos, a full-stack developer from Portugal. <br>
-                I'm 16 and I'm in the second year of the Information Systems Administration and Programming. <br>
-                The course had give me the chance to learn some concepts about software and web development, but besides that I like to learn by myself, keeping me updated in the technology universe, which is constantly evolving.
-            </div>
-        </div>
-        <div id="contact-me">
-            <h1 class="subtitle"> Contact me </h1>
-            <div class="text">
-                Don't hesitate to contact me.
-            </div>
-            <div class="form">
-                <input id="email" type="email" placeholder="Email"></input><br>
-                <input id="name" type="name" placeholder="Name"></input><br>
-                <input id="subject" type="name" placeholder="Subject"></input><br>
-                <textarea id="message" placeholder="Message"></textarea><br>
-                <button onclick="send()"> Send </button>
-            </div>
-        </div>
-        <footer>
-            Developed by Carlos Tojal © 2020. All rights reserved.
-            <div class="social">
-                <a href="https://reddit.com/u/carlostojal" target="_blank"><img src="../img/reddit.png"></a>
-                <a href="https://twitter.com/CarlosTojal" target="_blank"><img src="../img/twitter.png"></a>
-                <a href="https://instagram.com/carlostojal_dev" target="_blank"><img src="../img/instagram.png"></a>
-                <a href="https://facebook.com/carlos.tojal" target="_blank"><img src="../img/facebook.png"></a>
-                <a href="https://github.com/carlostojal" target="_blank"><img src="../img/github.png"></a>
-            </div>
-        </footer>
-    <script>
-
-        var userLang = navigator.language || navigator.userLanguage; 
-
-        if(userLang == "pt-PT" || userLang == "pt-BR")
-            window.location.href = "pt";
-        
-        function send() {
-
-            var email = document.getElementById("email").value;
-            var name = document.getElementById("name").value;
-            var subject = document.getElementById("subject").value;
-            var message = document.getElementById("message").value;
-
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("GET", "https://carlostojal-dev.000webhostapp.com/backend/send_mail/?email=" + email + "&name=" + name + "&subject=" + subject + "&message=" + message, false);
-            xhttp.send();
-
-            document.getElementById("email").value = "";
-            document.getElementById("name").value = "";
-            document.getElementById("subject").value = "";
-            document.getElementById("message").value = "";
-
-            alert("Message sent successfully.")
-        }
-
-        var TxtType = function(el, toRotate, period) {
-            this.toRotate = toRotate;
-            this.el = el;
-            this.loopNum = 0;
-            this.period = parseInt(period, 10) || 2000;
-            this.txt = '';
-            this.tick();
-            this.isDeleting = false;
-        };
-
-        TxtType.prototype.tick = function() {
-            var i = this.loopNum % this.toRotate.length;
-            var fullTxt = this.toRotate[i];
-
-            if (this.isDeleting) {
-            this.txt = fullTxt.substring(0, this.txt.length - 1);
-            } else {
-            this.txt = fullTxt.substring(0, this.txt.length + 1);
-            }
-
-            this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
-
-            var that = this;
-            var delta = 200 - Math.random() * 100;
-
-            if (this.isDeleting) { delta /= 2; }
-
-            if (!this.isDeleting && this.txt === fullTxt) {
-            delta = this.period;
-            this.isDeleting = true;
-            } else if (this.isDeleting && this.txt === '') {
-            this.isDeleting = false;
-            this.loopNum++;
-            delta = 500;
-            }
-
-            setTimeout(function() {
-            that.tick();
-            }, delta);
-        };
-
-        window.onload = function() {
-            var elements = document.getElementsByClassName('typewrite');
-            for (var i=0; i<elements.length; i++) {
-                var toRotate = elements[i].getAttribute('data-type');
-                var period = elements[i].getAttribute('data-period');
-                if (toRotate) {
-                new TxtType(elements[i], JSON.parse(toRotate), period);
-                }
-            }
-            var css = document.createElement("style");
-            css.type = "text/css";
-            css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
-            document.body.appendChild(css);
-        };
-
-        var prevScrollpos = window.pageYOffset;
-        window.onscroll = function() {
-        var currentScrollPos = window.pageYOffset;
-        if (prevScrollpos > currentScrollPos) {
-            document.getElementById("navbar").style.top = "0";
-        } else {
-            document.getElementById("navbar").style.top = "-200px";
-        }
-        prevScrollpos = currentScrollPos;
-        } 
-    </script>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<title>Carlos Tojal</title>
+	</head>
+	<body>
+		<h1>Carlos Tojal</h1>
+	</body>
 </html>
