create minimal version

--- a/index.html
+++ b/index.html
@@ -7,5 +7,86 @@
 	</head>
 	<body>
 		<h1>Carlos Tojal</h1>
+
+		<h2>About me:</h2>
+		<div>
+			<p>Carlos Tojal is a computer science student at the Polytechnic of Leiria. His passion for programming started at the age of 13. 
+				His research focus is on autonomous mobile robotics and he has been actively involved in the "SafeForest" project for the past year. 
+				The goal of this project is to design a robot to semi-autonomously clean forests, thus preventing the risk of wild fires.</p>
+
+			<p>In addition to his research, Carlos has also been a member of the Formula Student team for the past year and is currently serving as the leader of the "Autonomous Driving" department. In this role, he is responsible for leading research and development, as well as supervising the work developed by the department. Formula Student is a competition for university students to design and build a single-seater from the ground up to compete against other universities.</p>
+				
+			<p>Carlos' interests include computer vision, autonomous systems, deep learning, and parallel computing. He is eager to expand his knowledge and make contributions in these fields through ongoing research and academic studies.</p>
+				
+			<p>In his free times, he plays in an orchestra.</p>
+		</div>
+
+		<h2>Projects:</h2>
+		<ul>
+			<li>
+				<h3>Autonomous Driving Department Member</h3>
+				<h4>FSIPLeiria | Formula Student Team</h4>
+				<i>Oct 2021 -</i>
+				<div>
+					<p>As part of the Autonomous Driving Department, I am focused on controlling a formula type car on a constrained course autonomously. I am one of the department's founding members.</p>
+
+					<ul>
+						<li>Study and implementation of typical search methods, like A*;</li>
+						<li>Study and implementation of control models;</li>
+						<li>3D reconstruction using depth and color images;</li>
+						<li>State estimation using Kalman Filters;</li>
+						<li>Basic vehicle dynamics and kinematics studies;</li>
+						<li>Training of both well known and novel neural network architectures using PyTorch.</li>
+					</ul>
+				</div>
+			</li>
+
+			<li>
+				<h3>Autonomous Driving Department Leader</h3>
+				<h4>FSIPLeiria | Formula Student Team</h4>
+				<i>Aug 2022 -</i>
+				<div>
+					<p>Responsible by managing and reviewing the department's work, meeting the team's needs, goals and deadlines. Have the role of Scrum Master.</p>
+					<p>Also keep contact with key sponsors from the tech and automotive industries.</p>
+				</div>
+			</li>
+
+			<li>
+				<h3>Research Fellow | SafeForest Project</h3>
+				<h4>Institute of Systems and Robotics - University of Coimbra</h4>
+				<i>Oct 2021 -</i>
+				<div>
+					<p>Working on the Institute of Systems and Robotics in collaboration with the Carnegie Mellon University and Ingeniarius, researching simultaneous localization and mapping algorithms applied on a semi-autonomous robot system for forest cleaning.</p>
+
+					<ul>
+						<li>Study of different robot simultaneous localization and mapping (SLAM) frameworks and its strengths and weaknesses;</li>
+						<li>Use of OctoMaps;</li>
+						<li>Improvement of computationally costly algorithms with CUDA;</li>
+						<li>PointCloud registration and filtering;</li>
+						<li>3D reconstruction from depth and color images;</li>
+						<li>Traversability estimation for ground robots from pointclouds using a ResNet;</li>
+						<li>Collaboration on different technical presentations and reports.</li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+
+		<h2>Education:</h2>
+		<ul>
+			<li>
+				<h3>Computer Science</h3>
+				<h4>Polytechnic University of Leiria</h4>
+				<i>2021 -</i>
+			</li>
+		</ul>
+
+		<h2>Hobbies:</h2>
+		<ul>
+			<li>
+				<h3>Trumpet Player</h3>
+				<h4>Círculo de Cultura Musical Bombarralense</h4>
+				<i>2010 -</i>
+			</li>
+		</ul>
 	</body>
 </html>
